[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/shrek.png" type="Texture" id=1]
[ext_resource path="res://Assets/Escenas/Shrek.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.6679, 152.193 )

[sub_resource type="CircleShape2D" id=2]
radius = 874.82

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60.9139, 158.71 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Shrek" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
hit_damage = 10
velocidad = 300
can_move = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.08749, 17.0423 )
shape = SubResource( 1 )

[node name="TimerSaltos" type="Timer" parent="."]
autostart = true

[node name="AreaDetectar" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectar"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 2.95621, 17.0089 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Da√±o" = SubResource( 4 )

[connection signal="timeout" from="TimerSaltos" to="." method="_on_TimerSaltos_timeout"]
[connection signal="body_entered" from="AreaDetectar" to="." method="_on_AreaDetectar_body_entered"]
[connection signal="body_exited" from="AreaDetectar" to="." method="_on_AreaDetectar_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
